# HelenOS_analysis

./: .gitignore  log.txt  meson.build
SI/HelenOS.si4project/: HelenOS.SearchResults  HelenOS.sip_xad  HelenOS.sip_xm  HelenOS.sip_xsb  HelenOS.sip_xsd  HelenOS.siproj  HelenOS.siwork
SI/HelenOS.si4project/Backup/: context(4549).h  context(4917).S  kinit(6159).c  main(6408).c  task(2509).h  task(5918).c
SI/HelenOS.si4project/cache/parse/: .._ZYC-Debug_kernel_amd64_libnoninstrumentables.a.p_context_struct.h.check.c.sisc  .._ZYC-Debug_kernel_amd64_libnoninstrumentables.a.p_istate_struct.h.check.c.sisc  .._ZYC-Debug_kernel_amd64_libnoninstrumentables.a.p_kseg_struct.h.check.c.sisc  .._ZYC-Debug_kernel_amd64_libnoninstrumentables.a.p_memmap_struct.h.check.c.sisc  .._ZYC-Debug_kernel_amd64_libnoninstrumentables.a.p_multiboot_info_struct.h.check.c.sisc  .._ZYC-Debug_kernel_amd64_libnoninstrumentables.a.p_multiboot_memmap_struct.h.check.c.sisc  .._abi_arch_abs32le_include_abi_arch_elf.h.sisc  .._abi_arch_amd64_include_abi_arch_elf.h.sisc  .._abi_arch_arm32_include_abi_arch_elf.h.sisc  .._abi_arch_arm64_include_abi_arch_elf.h.sisc  .._abi_arch_ia32_include_abi_arch_elf.h.sisc  .._abi_arch_ia64_include_abi_arch_elf.h.sisc  .._abi_arch_mips32_include_abi_arch_elf.h.sisc  .._abi_arch_ppc32_include_abi_arch_elf.h.sisc  .._abi_arch_riscv64_include_abi_arch_elf.h.sisc  .._abi_arch_sparc64_include_abi_arch_elf.h.sisc  .._abi_doc_doxygroups.h.sisc  .._abi_include__bits_NULL.h.sisc  .._abi_include__bits_WEOF.h.sisc  .._abi_include__bits___noreturn.h.sisc  .._abi_include__bits___opaque_handle.h.sisc  .._abi_include__bits_all.h.sisc  .._abi_include__bits_decls.h.sisc  .._abi_include__bits_errno.h.sisc  .._abi_include__bits_int128_t.h.sisc  .._abi_include__bits_native.h.sisc  .._abi_include__bits_off64_t.h.sisc  .._abi_include__bits_ptrdiff_t.h.sisc  .._abi_include__bits_size_t.h.sisc  .._abi_include__bits_ssize_t.h.sisc  .._abi_include__bits_uchar.h.sisc  .._abi_include__bits_wchar_limits.h.sisc  .._abi_include__bits_wchar_t.h.sisc  .._abi_include__bits_wint_t.h.sisc  .._abi_include_abi_asmtool.h.sisc  .._abi_include_abi_cap.h.sisc  .._abi_include_abi_ddi_arg.h.sisc  .._abi_include_abi_ddi_irq.h.sisc  .._abi_include_abi_elf.h.sisc  .._abi_include_abi_errno.h.sisc  (+3941 more)
ZYC-Debug/: (Sys)interrupt.txt  1-unmapped段分析.md  2-GDT.md  4-exceptions.md  5-frame_init.md  6-slab.md  APIC.txt  AP_BOOT.txt  GDT&IDT.md  HelenOS.wb  PROGRAM_FULL_MAP.wb  Syscall.txt  std头文件实现.txt  系统Config设置变量.txt  编译amd64架构的编译指令输出.txt
ZYC-Debug/Libs_and_apps/amd64/: .ninja_deps  .ninja_log  Makefile.config  build.ninja  compile_commands.json  config.h  crossfile  prev_profile  tools
ZYC-Debug/Libs_and_apps/amd64/kernel/: _link.ld  kernel.elf
ZYC-Debug/Libs_and_apps/amd64/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-dependencies.json  intro-machines.json  intro-projectinfo.json  intro-targets.json  meson-info.json
ZYC-Debug/Libs_and_apps/amd64/meson-logs/: meson-log.txt
ZYC-Debug/Libs_and_apps/amd64/meson-private/: cmd_line.txt
ZYC-Debug/Libs_and_apps/amd64/uspace/: app_aboutos  app_aboutos.map  app_barber  app_barber.map  app_bdsh  app_bdsh.map  app_bithenge  app_bithenge.map  app_blkdump  app_blkdump.map  app_calculator  app_calculator.map  app_corecfg  app_corecfg.map  app_cpptest  app_cpptest.map  app_date  app_date.map  app_devctl  app_devctl.map  app_df  app_df.map  app_disp  app_disp.map  app_display_cfg  app_display_cfg.map  app_dltest  app_dltest.map  app_dltests  app_dltests.map  app_dnscfg  app_dnscfg.map  app_dnsres  app_dnsres.map  app_download  app_download.map  (+352 more)
ZYC-Debug/kernel_amd64/: _link.ld  kernel.dbg  kernel.elf  kernel.elf.map  kernel.elf.stripped
ZYC-Debug/kernel_amd64/libnoninstrumentables.a.p/: memmap_struct.h.check.c
abi/include/_bits/: native.h
abi/include/abi/: sysinfo.h
common/printf/: printf_core.c
kernel/: meson.build
kernel/arch/amd64/: _link.ld.in  meson.build
kernel/arch/amd64/include/arch/: context.h  cpu.h  interrupt.h  pm.h
kernel/arch/amd64/include/arch/mm/: as.h
kernel/arch/amd64/src/: amd64.c  asm.S  context.S  interrupt.c  kseg.c  pm.c  syscall.c  vreg.c
kernel/arch/amd64/src/boot/: memmap.c  multiboot.S  multiboot2.S
kernel/arch/amd64/src/cpu/: cpu.c
kernel/arch/amd64/src/mm/: km.c  page.c
kernel/arch/amd64/src/smp/: ap.S
kernel/arch/ia32/include/arch/smp/: smp.h
kernel/arch/ia32/src/: pm.c
kernel/arch/ia32/src/bios/: bios.c
kernel/arch/ia32/src/drivers/: i8254.c
kernel/arch/ia32/src/mm/: frame.c  tlb.c
kernel/arch/ia32/src/smp/: apic.c  smp.c
kernel/genarch/src/acpi/: acpi.c  madt.c
kernel/genarch/src/drivers/ega/: ega.c
kernel/genarch/src/drivers/i8259/: i8259.c
kernel/genarch/src/fb/: bfb.c
kernel/genarch/src/multiboot/: multiboot.c  multiboot2.c
kernel/generic/include/: arch.h  config.h  context.h  cpu.h  print.h
kernel/generic/include/ddi/: ddi.h
kernel/generic/include/ipc/: event.h  ipc.h
kernel/generic/include/lib/: ra.h
kernel/generic/include/main/: main.h
kernel/generic/include/mm/: as.h  frame.h  slab.h
kernel/generic/include/proc/: task.h  thread.h
kernel/generic/include/synch/: syswaitq.h
kernel/generic/include/sysinfo/: sysinfo.h
kernel/generic/src/console/: console.c  kconsole.c
kernel/generic/src/cpu/: cpu.c
kernel/generic/src/ddi/: ddi.c  irq.c
kernel/generic/src/interrupt/: interrupt.c
kernel/generic/src/ipc/: event.c  ipc.c
kernel/generic/src/lib/: ra.c
kernel/generic/src/log/: log.c
kernel/generic/src/main/: kinit.c  main.c
kernel/generic/src/mm/: as.c  frame.c  km.c  malloc.c  page.c  reserve.c  slab.c  tlb.c
kernel/generic/src/printf/: printf.c
kernel/generic/src/proc/: scheduler.c  task.c  thread.c
kernel/generic/src/sysinfo/: sysinfo.c
meson/arch/amd64/: meson.build
meson/part/compiler_args/: meson.build
meson/part/initrd_manifest/: meson.build
meson/part/read_config/: meson.build
meson/part/tools/: meson.build
tools/: autocheck.awk
uspace/: meson.build
uspace/lib/: meson.build
uspace/lib/c/: meson.build
(+250 files in other folders)
